2008-10-20  Steve Huntley  <stephen.huntley@alum.mit.edu>

	* tclIndex: Corrected version number.
	* pkgIndex.tcl.in: Edited to replace function of deleted 
	pkgIndex.tcl in template subdir.

2008-10-15  Steve Huntley  <stephen.huntley@alum.mit.edu>

	vfs::template package update ver. 1.5.3:

	* templatevfs.tcl: Incorporated AK's fix below.
	* collatevfs.tcl: ensured binary file contents got written
	correctly, and ensured that not only file contents but 
	also file attributes were updated to all write targets.

2009-07-06  Andreas Kupries  <andreask@activestate.com>

	* library/template/templatevfs.tcl (memchan): Fix result for
	* pkgIndex.tcl: unix. The bug was reported on the wiki. The fix
	  there was wrong, did improper handling of the $args argument.
	  Fixed here. Version bumped to 1.5.3.

2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/zipvfs.tcl: Handle directory names that include
	* tests/vfsZip.test:  glob chars. Added some tests.
	* win/makefile.vc: fix running the tests.

2009-02-06  Andreas Kupries  <andreask@activestate.com>

	* library/vfs.tcl.in: New file encapsulating the package load
	process. Cleaner than the loadvfs proc, and much more suitable for
	conversion to a teabag.

	* pkgIndex.tcl.in: Cleaned up the declarations for package 'vfs'.
	Removed the 'vfslib' package, it never was such.
	
	* Makefile.in: Added installation of library/vfs.tcl.
	* configure.in: Added library/vfs.tcl.in.
	* configure: Regenerated.

	* win/makefile.vc: Updated the windows build file to configure
	vfs.tcl.in, and install vfs.tcl.

2009-01-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/vfslib.test: Make use of the core zlib and refchan features
	* pkgIndex.tcl.in:   by default for Tcl 8.6.

	* win/makefile.vc:  Updated windows build files
	* win/rules.vc:
	* win/nmakehlp.c:

	* tests/*.test: Tidied up the tests. Added lots of zipfs tests.
	
	* library/zipvfs.tcl: Applied patch from [Bug 1011492] to ensure